app/assets/stylesheets/components/_game-card.scss
// ------------- Classes -------------

.age-cat {
  color: $green;
  font-weight: bold;
}

.card-trash {
  color: $orange;
}

.children-dropdown {
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  padding: 0px;
  width: 100%;
}

.dropdown-menu {
  width: 256px
}

.game-card {
  -moz-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  -webkit-transition: all 0.4s ease;
  border: 1px solid rgb(229, 229, 229);
  border-radius: 13px;
  box-shadow: none;
  margin-top: 0;
  margin-right: auto;
  margin-left: auto;
  transition: all 0.4s ease;
  // width: clamp(220px, 50%, 299px);
  width: clamp(290px, 21vw, 299px);

  &:hover {
    box-shadow: 0 0 18px rgba(20, 20, 20, 0.6);
    margin-top: 8px;
  }
}

.game-card-image {
  border-top-left-radius: 13px;
  border-top-right-radius: 13px;
  height: 160px;
  object-fit: cover;
  object-position: center left;
  width: 100%;
}

.game-card-kid {
  -webkit-transition: -webkit-transform .5s cubic-bezier(.47, 3.32, .31, -.36), opacity .3s;
  -webkit-transition: opacity .3s, -webkit-transform .5s cubic-bezier(.47, 3.32, .31, -.36);
  -webkit-transform: scale(1);
  background-color: #895fcc;
  border: 1px solid rgb(229, 229, 229);
  border-radius: 13px;
  padding-left: 10px;
  padding-right: 10px;
  transform: scale(1);
  transition: opacity .3s, -webkit-transform .5s cubic-bezier(.47, 3.32, .31, -.36);
  transition: transform .4s cubic-bezier(.47, 3.32, .31, -.36), opacity .3s;
  transition: transform .4s cubic-bezier(.47, 3.32, .31, -.36), opacity .3s,
    -webkit-transform .5s cubic-bezier(.47, 3.32, .31, -.36);

  &:hover {
    transform: scale(1.1);
  }
}

.game-card-kid-image-medium {
  border-top-left-radius: 13px;
  border-top-right-radius: 13px;
  height: 180px;
  object-fit: fit;
  width: 100%;
}

.game-desc {
  margin: 4px;
  padding: 0 4px;
}

.games-page {
  display: flex;
  justify-content: space-around;
  position: static;
}

.h2-game-title {
  height: 100%;
  padding: 0 4px;
}

.hover-dimensions {
  height: 397px !important;
  // width: 240px;
}

.p-dropdown {
  display: flex;
  flex-direction: column;
  padding: 0px;
}

.search-game-card {
  -moz-transition: all 0.4s ease;
  -o-transition: all 0.4s ease;
  -webkit-transition: all 0.4s ease;
  border: 1px solid rgb(229, 229, 229);
  border-radius: 13px;
  box-shadow: none;
  min-height: 376px;
  padding-top: 16px;
  transition: all 0.4s ease;
  width: 265px;

  &:hover {
    box-shadow: 0 0 18px rgba(20, 20, 20, 0.6);
    margin-top: 8px;
  }
}

.search-game-card-image {
  border-top-left-radius: 13px;
  border-top-right-radius: 13px;
  display: block;
  height: 90%;
  margin: 0 auto;
  object-fit: cover;
  object-position: center center;
  width: 90%;
}

.show-card {
  margin-top: 52%;
}

.with-delete {
  height: 430px;
}

// ------------- IDs -------------

